--- a/_data/communities.yml
+++ b/_data/communities.yml
@@ -15,6 +15,10 @@
     - STACK-X Conference
     - STACK 2020
     - STACK the Flags 2020
+    
+- name: DGX
+  description: >
+    insert description
 
 - name: Newsletter
   description: >
@@ -28,11 +32,6 @@
 
 - name: Developer Blogs
   description: Read about the innovations of GovTech’s teams!
-
-- name: COVID-19 Volunteering Opportunities
-  description: >
-    Find out how you can help the Singapore Government in its digital efforts to
-    combat the COVID-19 pandemic
 
 - name: GovBuy
   description: >
