updated COVID in communities.yml

--- a/_data/communities.yml
+++ b/_data/communities.yml
@@ -15,7 +15,7 @@
     - STACK-X Conference
     - STACK 2020
     - STACK the Flags 2020
-    - Covid-19 Volunteering Opportunities
+    - COVID-19 Volunteering Opportunities
     
 - name: DGX
   description: >
