--- a/_data/communities.yml
+++ b/_data/communities.yml
@@ -15,10 +15,11 @@
     - STACK-X Conference
     - STACK 2020
     - STACK the Flags 2020
+    - COVID-19 Volunteering Opportunities
 
 - name: Newsletter
   description: >
-    Stay ahead of it all with our updates on GCC (Government Commercial Cloud) and 
+    Stay ahead of it all with our updates on GCC (Government Commercial Cloud) and
     SGTS (Singapore Government Tech Stack) in WOG development and more.
 
 - name: Open-source Technologies
@@ -28,11 +29,6 @@
 
 - name: Developer Blogs
   description: Read about the innovations of GovTech’s teams!
-
-- name: COVID-19 Volunteering Opportunities
-  description: >
-    Find out how you can help the Singapore Government in its digital efforts to
-    combat the COVID-19 pandemic
 
 - name: GovBuy
   description: >
