Adding the dgx folders and files

--- a/_data/communities.yml
+++ b/_data/communities.yml
@@ -17,6 +17,10 @@
     - STACK the Flags 2020
     - COVID-19 Volunteering Opportunities
 
+- name: DGX
+  description: >
+    insert description
+
 - name: Newsletter
   description: >
     Stay ahead of it all with our updates on GCC (Government Commercial Cloud) and
