Update dgx description in communities.yml

--- a/_data/communities.yml
+++ b/_data/communities.yml
@@ -19,7 +19,8 @@
 
 - name: DGX
   description: >
-    insert description
+    A two-day invitation-only event organised by the Smart Nation and Digital Government Group Singapore, 
+    for digital government leaders to engage with like minded agencies to transform and develop better digital service.
 
 - name: Newsletter
   description: >
